adicionei um parágrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -8,8 +8,12 @@
 
 <body>
     <h1>Olá, Mundo!</h1>
+    <hr>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit ea reiciendis doloribus enim harum tenetur aliquid
         cupiditate quo eum optio laudantium atque, itaque fugit architecto reprehenderit numquam rerum hic culpa?</p>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Temporibus repellendus praesentium asperiores. Quos
+        facilis expedita at ea eos, minima, illo mollitia ut debitis magni laudantium eius officia minus ducimus earum.
+    </p>
 </body>
 
 </html>
